Anonymizing demo.html

--- a/demo.html
+++ b/demo.html
@@ -120,7 +120,7 @@
 				<div class="inner">
 					<header>
 						<h2><a onclick="showSnackbar();">Perchè Usare Sinapsi</a></h2>
-						<p class="info">Scritto da <a href="#contatti">Andrea Avondo</a> e <a href="#contatti">Giulia Monardo</a> </p>
+						<p class="info">Scritto da <a href="#contatti">Mario Rossi</a> e <a href="#contatti">Maria Verdi</a> </p>
 					</header>
 					<p>In questo breve articolo vogliamo condividere con te i principali vantaggi che puoi trarre dall’utilizzo di Sinapsi.<br>
 						Dalle ricerche condotte sugli effetti della collaborazione tra MMG e psicologi è stato rilevato che il lavoro in équipe, oltre a produrre importanti benefici per i pazienti e determinare una riduzione dei costi per il SSN, riduce il carico di lavoro del medico di base fino al 48%, aumentandone significativamente il benessere occupazionale.<br>
@@ -180,14 +180,14 @@
 										<div class="card" style="background-color: rgba(0,0,0,0.2)">
 												<img src="images/contact-1.jpg" alt="Avatar" style="width:100%; border-radius: 5px 5px 0 0;">
 												<div class="cont">
-													<h4><b>Dott. Andrea&nbsp;Avondo</b></h4>
+													<h4><b>Dott. Mario&nbsp;Rossi</b></h4>
 													<p>Psicologo</p>
-													<p><a class="icon fa-phone"></a>&nbsp;&nbsp;+39&nbsp;3387420435<br>
-														<a class="icon fa-envelope"></a>&nbsp;&nbsp;andrea.avondo01@gmail.com
+													<p><a class="icon fa-phone"></a>&nbsp;&nbsp;+39&nbsp;123456789<br>
+														<a class="icon fa-envelope"></a>&nbsp;&nbsp;mario.rossi@gmail.com
 													</p>	
 													<ul class="icons">
-															<li><a href="https://www.facebook.com/AvondoPsicologo/" class="icon fa-facebook"><span class="label">Twitter</span></a></li>
-															<li><a href="https://www.instagram.com/avondoandrea_psicologo/" class="icon fa-instagram"><span class="label">Facebook</span></a></li>
+															<li><a href="https://www.facebook.com" class="icon fa-facebook"><span class="label">Twitter</span></a></li>
+															<li><a href="https://www.instagram.com" class="icon fa-instagram"><span class="label">Facebook</span></a></li>
 													</ul>
 												</div>
 										</div>
@@ -196,14 +196,14 @@
 										<div class="card" style="background-color: rgba(0,0,0,0.2)">
 												<img src="images/contact-2.jpg" alt="Avatar" style="width:100%; border-radius: 5px 5px 0 0;">
 												<div class="cont">
-													<h4><b>Dott.ssa Giulia&nbsp;Monardo</b></h4>
+													<h4><b>Dott.ssa Maria&nbsp;Verdi</b></h4>
 													<p>Psicologa</p>
-													<p><a class="icon fa-phone"></a>&nbsp;&nbsp;+39&nbsp;3892485531<br>
-														<a class="icon fa-envelope"></a>&nbsp;&nbsp;giulia.monardo01@gmail.com
+													<p><a class="icon fa-phone"></a>&nbsp;&nbsp;+39&nbsp;123456789<br>
+														<a class="icon fa-envelope"></a>&nbsp;&nbsp;maria.verdi@gmail.com
 													</p>	
 													<ul class="icons">
-															<li><a href="https://it.linkedin.com/in/giulia-monardo-258311115" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-															<li><a href="https://www.instagram.com/giuliamnrd/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+															<li><a href="https://it.linkedin.com" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+															<li><a href="https://www.instagram.com" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 													</ul>
 												</div>
 										</div>
@@ -212,15 +212,15 @@
 									<div class="card" style="background-color: rgba(0,0,0,0.2)">
 											<img src="images/contact-3.jpg" alt="Avatar" style="width:100%; border-radius: 5px 5px 0 0;">
 											<div class="cont">
-												<h4><b>Dott.ssa Anna&nbsp;Barecka-Bocchiola</b></h4>
-												<p>Psicologa </p>
-												<p><a class="icon fa-phone"></a>&nbsp;&nbsp;+39&nbsp;3384693196<br>
-													<a class="icon fa-envelope"></a>&nbsp;&nbsp;bocchiola.anna@gmail.com
+												<h4><b>Dott.ssa Paola&nbsp;Bruni</b></h4>
+												<p>Consulente </p>
+												<p><a class="icon fa-phone"></a>&nbsp;&nbsp;+39&nbsp;123456789<br>
+													<a class="icon fa-envelope"></a>&nbsp;&nbsp;paola.brunia@gmail.com
 												</p>											
 												</ul>
 												<ul class="icons">
-														<li><a href="https://www.annabocchiola.it/" class="icon fa-globe"><span class="label">Twitter</span></a></li>
-														<li><a href="https://www.facebook.com/bocchiolapsychologist/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+														<li><a href="https://www.google.it/" class="icon fa-globe"><span class="label">Twitter</span></a></li>
+														<li><a href="https://www.facebook.com/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 												</ul>
 											</div>
 									</div>
@@ -236,7 +236,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					&copy; Dott. Andrea Avondo / Dott.ssa Giulia Monardo - Tutti i diritti riservati. <a>Privacy Policy</a>
+					&copy; Dott. Mario Rossi / Dott.ssa Maria Verdi - Tutti i diritti riservati. <a>Privacy Policy</a>
 					<br> Sito realizzato da: <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
 					<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>&nbsp;&nbsp;-&nbsp;Design:&nbsp;<a href="https://templated.co">Templated.</a>
 				</div>
