--- a/info1.html
+++ b/info1.html
@@ -30,7 +30,7 @@
 				<div class="inner" style="background-color: rgba(255,255,255,0.9); padding: 5%;">
 					<header>
 						<h1>Perchè Usare Sinapsi</h1>
-						<p class="info">Scritto il 28/06/2020 da <a>Andrea Avondo</a> e <a>Giulia Monardo</a></p>
+						<p class="info">Scritto il 28/06/2020 da <a>Mario Rossi</a> e <a>Maria Verdi</a></p>
 					</header>
 					<p>In questo breve articolo vogliamo condividere con te i principali vantaggi che puoi trarre dall’utilizzo di Sinapsi.</p>
 					<p>Dalle ricerche condotte sugli effetti della collaborazione tra MMG e psicologi è stato rilevato che il lavoro in équipe, oltre a produrre importanti benefici per i pazienti e determinare una riduzione dei costi per il SSN, riduce il carico di lavoro del medico di base fino al 48%, aumentandone significativamente il benessere occupazionale.
@@ -84,8 +84,8 @@
 		<!-- Footer -->
 		<footer id="footer">
 				<div class="copyright">
-					&copy; Dott. Andrea Avondo / Dott.ssa Giulia Monardo - Tutti i diritti riservati.
-					<br> Sito realizzato da: <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
+					&copy; Tommaso Mario  Buonocore  - Tutti i diritti riservati.
+					<br> Sito realizzato da: <a href="https://www.linkedin.com/in/tbuonocore">detsutut</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
 					<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>&nbsp;&nbsp;-&nbsp;Design:&nbsp;<a href="https://templated.co">Templated.</a>
 				</div>
 		</footer>
