--- a/demo.html
+++ b/demo.html
@@ -234,13 +234,13 @@
 			</article>
 
 		<!-- Footer -->
-			<footer id="footer">
+		<footer id="footer">
 				<div class="copyright">
-					&copy; Dott. Mario Rossi / Dott.ssa Maria Verdi - Tutti i diritti riservati. <a>Privacy Policy</a>
-					<br> Sito realizzato da: <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
+					&copy; Tommaso Mario  Buonocore  - Tutti i diritti riservati.
+					<br> Sito realizzato da: <a href="https://www.linkedin.com/in/tbuonocore">detsutut</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
 					<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>&nbsp;&nbsp;-&nbsp;Design:&nbsp;<a href="https://templated.co">Templated.</a>
 				</div>
-			</footer>
+		</footer>
 
 		<div id="snackbar">Funzione non disponibile in demo</div>
 
