--- a/demo.html
+++ b/demo.html
@@ -23,7 +23,7 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a onclick="showSnackbar();">Perchè usare Sinapsi</a></li>
+					<li><a onclick="window.location.assign('info1.html');">Perchè usare Sinapsi</a></li>
 				</ul>
 			</nav>
 
@@ -127,7 +127,7 @@
 						È stato dimostrato come gran parte del tempo del medico di base sia dedicato ad affrontare i problemi emotivi dei propri assistiti, spesso espressi sotto forma di sofferenza somatica o di disagio relazionale.
 					</p>
 					<ul class="actions">
-						<li><a class="button alt" onclick="window.location.href('info1.html');">Continua a leggere</a></li>
+						<li><a class="button alt" onclick="window.location.assign('info1.html');">Continua a leggere</a></li>
 					</ul>
 				</div>
 			</div>
